/api/v1/users/join registeredAt, updatedAt 추가

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	// swagger dependency
 	implementation "io.springfox:springfox-boot-starter:3.0.0"
 	implementation "io.springfox:springfox-swagger-ui:3.0.0"
+	// test
+	implementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
